--- a/genweb/organs/locales/en/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/en/LC_MESSAGES/genweb.organs.po
@@ -17,490 +17,490 @@ msgstr ""
 #: ./genweb/organs/content/organgovern.py:47
 #: ./genweb/organs/content/organsfolder_templates/organsfolder_view.pt:38
 msgid "Acronym"
-msgstr ""
+msgstr "Acronym"
 
 #: ./genweb/organs/content/organgovern.py:48
 msgid "Acronym Description"
-msgstr ""
+msgstr "Nickname that will lead to simplified URL organ."
 
 #: ./genweb/organs/content/acta.py:26
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:49
 #: ./genweb/organs/profiles/default/types/genweb.organs.acta.xml
 msgid "Acta"
-msgstr ""
+msgstr "Acta"
 
 #: ./genweb/organs/browser/views/acta_print.pt:99
 #: ./genweb/organs/content/acta.py:94
 #: ./genweb/organs/content/acta_templates/acta_view.pt:142
 msgid "Acta Body"
-msgstr ""
+msgstr "Acta body"
 
 #: ./genweb/organs/browser/views/acta_print.pt:43
 msgid "Acta:"
-msgstr ""
+msgstr "Acta:"
 
 #: ./genweb/organs/content/organgovern.py:103
 #: ./genweb/organs/content/organgovern_templates/organgovern_view.pt:77
 #: ./genweb/organs/content/punt.py:78
 msgid "Agreement and document labels"
-msgstr ""
+msgstr "Agreement and document labels"
 
 #: ./genweb/organs/content/organgovern_templates/organgovern_view.pt:74
 #: ./genweb/organs/content/punt.py:60
 #: ./genweb/organs/content/punt_templates/punt_view.pt:24
 msgid "Agreement number"
-msgstr ""
+msgstr "Agreement number"
 
 #: ./genweb/organs/content/acta.py:21
 #: ./genweb/organs/content/organgovern.py:30
 #: ./genweb/organs/content/sessio.py:27
 msgid "Assistents"
-msgstr ""
+msgstr "Assistants"
 
 #: ./genweb/organs/browser/views/acta_print.pt:74
 #: ./genweb/organs/content/acta.py:59
 #: ./genweb/organs/content/acta_templates/acta_view.pt:40
 msgid "Attending members"
-msgstr ""
+msgstr "Attending members"
 
 #: ./genweb/organs/content/sessio.py:126
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:125
 msgid "Audio link"
-msgstr ""
+msgstr "Audio link"
 
 #: ./genweb/organs/content/sessio.py:108
 msgid "Body Mail"
-msgstr ""
+msgstr "Body Mail"
 
 #: ./genweb/organs/content/organgovern.py:111
 msgid "Body Mail convoquing"
-msgstr ""
+msgstr "Template message from the convoquing session"
 
 #: ./genweb/organs/content/organgovern.py:112
 msgid "Body Mail convoquing description"
-msgstr ""
+msgstr "Message attached to convene a session. Adds the Footer and header."
 
 #: ./genweb/organs/content/sessio.py:109
 msgid "Body Mail description"
-msgstr ""
+msgstr "Message Body convening of the session"
 
 #: ./genweb/organs/content/organgovern.py:118
 msgid "Body Mail send"
-msgstr ""
+msgstr "Template from message used in Send Message action"
 
 #: ./genweb/organs/content/organgovern.py:119
 msgid "Body Mail send description"
-msgstr ""
+msgstr "Message attached executing the Send Message Action. It adds just the foot of the post."
 
 #: ./genweb/organs/content/sendMessage.py:154
 msgid "Cancel"
-msgstr ""
+msgstr "Cancel"
 
 #: ./genweb/organs/content/punt_templates/punt_view.pt:41
 msgid "Contingut"
-msgstr ""
+msgstr "Content"
 
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:46
 msgid "Dades"
-msgstr ""
+msgstr "Data"
 
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:153
 msgid "Data i hora"
-msgstr ""
+msgstr "Date and Time"
 
 #: ./genweb/organs/content/acta_templates/acta_view.pt:108
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:58
 msgid "Data:"
-msgstr ""
+msgstr "Date:"
 
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:159
 msgid "Destinataris"
-msgstr ""
+msgstr "Recipients"
 
 #: ./genweb/organs/content/organgovern.py:104
 msgid "Enter labels, separated by commas."
-msgstr ""
+msgstr "Indicate comma-delimited literals to be used as state approval of the agenda points."
 
 #: ./genweb/organs/content/organgovern.py:91
 msgid "Enter the from used in the mail form"
-msgstr ""
+msgstr "This is the sender notification"
 
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:34
 msgid "Enviar"
-msgstr ""
+msgstr "Send"
 
 #: ./genweb/organs/content/file.py:19
 msgid "Es tracta d'un fitxer privat?"
-msgstr ""
+msgstr "This option marked, indicates that this is an external file"
 
 #: ./genweb/organs/content/punt.py:66
 msgid "Es un acord?"
-msgstr ""
+msgstr "It is an agreement?"
 
 #: ./genweb/organs/content/organgovern.py:105
 msgid "Esborrany, Pendent d'aprovació, Aprovat, Informat, No aprovat, Derogat, Informatiu"
-msgstr ""
+msgstr "Draft, Pending Approval, Approved, Informed, Not approved, Repealed, Informative"
 
 #: ./genweb/organs/content/file_templates/file_view.pt:16
 msgid "Esteu visualitzant un fitxer <strong>PRIVAT</strong>."
-msgstr ""
+msgstr "You're viewing a <strong> PRIVATE </ strong>file."
 
 #: ./genweb/organs/content/file_templates/file_view.pt:21
 msgid "Esteu visualitzant un fitxer <strong>PUBLIC</strong>."
-msgstr ""
+msgstr "You're viewing a <strong> PUBLIC </ strong>file."
 
 #: ./genweb/organs/content/punt_templates/punt_view.pt:14
 msgid "Esteu visualitzant un punt marcat com Acord."
-msgstr ""
+msgstr "You're viewing a point of the agenda marked as Agreement."
 
 #: ./genweb/organs/browser/views/acta_print.pt:84
 #: ./genweb/organs/content/acta.py:73
 #: ./genweb/organs/content/acta_templates/acta_view.pt:74
 msgid "Excused members"
-msgstr ""
+msgstr "Excused members"
 
 #: ./genweb/organs/profiles/default/types/genweb.organs.file.xml
 msgid "File"
-msgstr ""
+msgstr "File"
 
 #: ./genweb/organs/content/file_templates/file_view.pt:48
 msgid "File contents"
-msgstr ""
+msgstr "File contents"
 
 #: ./genweb/organs/content/acta_templates/acta_view.pt:155
 msgid "Files"
-msgstr ""
+msgstr "Files"
 
 #: ./genweb/organs/content/punt_templates/punt_view.pt:51
 msgid "Fitxers a publicar"
-msgstr ""
+msgstr "Files published"
 
 #: ./genweb/organs/content/punt_templates/punt_view.pt:54
 msgid "Fitxers interns"
-msgstr ""
+msgstr "Internal files"
 
 #: ./genweb/organs/content/acta.py:101
 #: ./genweb/organs/content/acta_templates/acta_view.pt:148
 msgid "Footer"
-msgstr ""
+msgstr "Acta footer"
 
 #: ./genweb/organs/content/organgovern.py:90
 msgid "From mail"
-msgstr ""
+msgstr "Email who sends the messages"
 
 #: ./genweb/organs/configure.zcml:31
 msgid "Genweb Organs de Govern (genweb.organs)"
-msgstr ""
+msgstr "Genweb Organs de Govern (genweb.organs)"
 
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:50
 msgid "Historial"
-msgstr ""
+msgstr "Historic"
 
 #: ./genweb/organs/browser/views/acta_print.pt:64
 msgid "Hora de fi:"
-msgstr ""
+msgstr "End time:"
 
 #: ./genweb/organs/content/sessio.py:87
 msgid "Incoming members list"
-msgstr ""
+msgstr "Incoming members list"
 
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:31
 msgid "Informar"
-msgstr ""
+msgstr "Inform"
 
 #: ./genweb/organs/configure.zcml:31
 msgid "Installs Organs de Govern package"
-msgstr ""
+msgstr "Installs Organs de Govern package"
 
 #: ./genweb/organs/browser/views/acta_print.pt:79
 #: ./genweb/organs/content/acta.py:66
 #: ./genweb/organs/content/acta_templates/acta_view.pt:57
 msgid "Invited members"
-msgstr ""
+msgstr "Invited members"
 
 #: ./genweb/organs/browser/views/acta_print.pt:48
 msgid "Lloc de realitzacio:"
-msgstr ""
+msgstr "Place:"
 
 #: ./genweb/organs/content/acta_templates/acta_view.pt:123
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:73
 msgid "Lloc:"
-msgstr ""
+msgstr "Place:"
 
 #: ./genweb/organs/content/organgovern.py:98
 #: ./genweb/organs/content/organsfolder.py:15
 msgid "Logo description"
-msgstr ""
+msgstr "Logo that can be used to print in Documents and Acta."
 
 #: ./genweb/organs/content/organgovern.py:79
 msgid "Mail address help"
-msgstr ""
+msgstr "Address or addresses to which messages arrive when a notification of the body is done"
 
 #: ./genweb/organs/content/sendMessage.py:30
 msgid "Mail address separated by commas."
-msgstr ""
+msgstr "Email addresses separated by commas."
 
 #: ./genweb/organs/content/sendMessage.py:35
 msgid "Message"
-msgstr ""
+msgstr "Message"
 
 #: ./genweb/organs/browser/events/change.py:119
 #: ./genweb/organs/browser/views.py:113
 msgid "Missatge enviat correctament"
-msgstr ""
+msgstr "Message sent successfully"
 
 #: ./genweb/organs/browser/views.py:164
 #: ./genweb/organs/content/sendMessage.py:144
 msgid "Missatge enviat per: "
-msgstr ""
+msgstr "Message sent: "
 
 #: ./genweb/organs/browser/events/change.py:122
 msgid "Missatge no enviat. Comprovi el from i el to del missatge"
-msgstr ""
+msgstr "Message not sent. Check the FROM and the TO from the message."
 
 #: ./genweb/organs/browser/views.py:116
 msgid "Missatge no enviat. Comprovi els destinataris del missatge"
-msgstr ""
+msgstr "Message not sent. Check the message recipients."
 
 #: ./genweb/organs/browser/views/acta_print.pt:89
 #: ./genweb/organs/content/acta.py:80
 #: ./genweb/organs/content/acta_templates/acta_view.pt:91
 msgid "Missing members"
-msgstr ""
+msgstr "List of people not attending"
 
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:48
 msgid "Multimedia"
-msgstr ""
+msgstr "Multimedia"
 
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:156
 msgid "Notificador"
-msgstr ""
+msgstr "Notifier"
 
 #: ./genweb/organs/content/organgovern.py:35
 #: ./genweb/organs/content/sessio.py:32
 msgid "Notifications"
-msgstr ""
+msgstr "Notifications"
 
 #: ./genweb/organs/content/organgovern.py:18
 msgid "Open to everybody"
-msgstr ""
+msgstr "Open to everybody"
 
 #: ./genweb/organs/content/sendMessage.py:156
 msgid "Operation Cancelled."
-msgstr ""
+msgstr "The operation was canceled."
 
 #: ./genweb/organs/profiles/default/types/genweb.organs.organgovern.xml
 msgid "Organ Govern"
-msgstr ""
+msgstr "Organ of Government"
 
 #: ./genweb/organs/content/organgovern.py:54
 msgid "Organ Govern description"
-msgstr ""
+msgstr "Organ of Government description"
 
 #: ./genweb/organs/content/organgovern.py:66
 msgid "Organ Govern members"
-msgstr ""
+msgstr "Composition of the Organ of Government"
 
 #: ./genweb/organs/content/organgovern.py:59
 msgid "Organ Govern type"
-msgstr ""
+msgstr "Organ of Government type"
 
 #: ./genweb/organs/content/organgovern.py:41
 msgid "Organ Title"
-msgstr ""
+msgstr "Organ of Government title"
 
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:78
 msgid "Organ de govern:"
-msgstr ""
+msgstr "Organ of Government:"
 
 #: ./genweb/organs/content/organgovern.py:97
 #: ./genweb/organs/content/organsfolder.py:14
 msgid "Organ logo"
-msgstr ""
+msgstr "Organ of Government Logo"
 
 #: ./genweb/organs/content/organgovern.py:72
 msgid "Organ permanently invited people"
-msgstr ""
+msgstr "Permanents guests"
 
 #: ./genweb/organs/content/organgovern.py:73
 msgid "Organ permanently invited people description."
-msgstr ""
+msgstr "List of names of people who are invited to the meetings of this body systematically despite not forming part."
 
 #: ./genweb/organs/content/organsfolder_templates/organsfolder_view.pt:41
 msgid "Organ type"
-msgstr ""
+msgstr "Organ of Government Type"
 
 #: ./genweb/organs/profiles/default/types/genweb.organs.organsfolder.xml
 msgid "Organs Folder"
-msgstr ""
+msgstr "Organ of Government Folder"
 
 #: ./genweb/organs/content/file.py:20
 msgid "Per defecte els fitxers són privats. Si vol fer públic el fitxer, cal desmarcar aquesta opció."
-msgstr ""
+msgstr "By default the files are private. If you want to publish the file, you need to uncheck this option."
 
 #: ./genweb/organs/content/file.py:26
 msgid "Please upload a document"
-msgstr ""
+msgstr "Please upload a document."
 
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:37
 msgid "Presentacio"
-msgstr ""
+msgstr "Presentation"
 
 #: ./genweb/organs/content/acta_templates/acta_view.pt:24
 msgid "Print Acta"
-msgstr ""
+msgstr "Print acta"
 
 #: ./genweb/organs/content/punt.py:73
 msgid "Proposal description"
-msgstr ""
+msgstr "Content"
 
 #: ./genweb/organs/content/organgovern_templates/organgovern_view.pt:71
 #: ./genweb/organs/content/punt.py:55
 #: ./genweb/organs/content/punt_templates/punt_view.pt:21
 msgid "Proposal point number"
-msgstr ""
+msgstr "Point of the Agenda"
 
 #: ./genweb/organs/profiles/default/types/genweb.organs.punt.xml
 msgid "Punt"
-msgstr ""
+msgstr "Point of the Agenda"
 
 #: ./genweb/organs/content/punt.py:50
 msgid "Punt Title"
-msgstr ""
+msgstr "Title"
 
 #: ./genweb/organs/content/sendMessage.py:29
 msgid "Recipients"
-msgstr ""
+msgstr "Recipients"
 
 #: ./genweb/organs/content/organgovern.py:20
 msgid "Restricted to Affected"
-msgstr ""
+msgstr "Restricted to affected"
 
 #: ./genweb/organs/content/organgovern.py:19
 msgid "Restricted to Members"
-msgstr ""
+msgstr "Restricted to members"
 
 #: ./genweb/organs/content/sendMessage.py:77
 msgid "Send"
-msgstr ""
+msgstr "Send"
 
 #: ./genweb/organs/browser/views/acta_print.pt:54
 msgid "Sessio del dia:"
-msgstr ""
+msgstr "Meeting on:"
 
 #: ./genweb/organs/profiles/default/types/genweb.organs.sessio.xml
 msgid "Session"
-msgstr ""
+msgstr "Sessión"
 
 #: ./genweb/organs/content/sessio.py:38
 msgid "Session Title"
-msgstr ""
+msgstr "Session Title"
 
 #: ./genweb/organs/content/acta.py:37
 #: ./genweb/organs/content/organgovern_templates/organgovern_view.pt:124
 #: ./genweb/organs/content/sessio.py:53
 msgid "Session date"
-msgstr ""
+msgstr "Session Date"
 
 #: ./genweb/organs/content/acta.py:52
 #: ./genweb/organs/content/acta_templates/acta_view.pt:118
 #: ./genweb/organs/content/sessio.py:68
 msgid "Session end time"
-msgstr ""
+msgstr "End Time Session"
 
 #: ./genweb/organs/content/acta_templates/acta_view.pt:104
 msgid "Session info"
-msgstr ""
+msgstr "Sessions Data"
 
 #: ./genweb/organs/content/acta.py:42
 #: ./genweb/organs/content/organgovern_templates/organgovern_view.pt:127
 #: ./genweb/organs/content/sessio.py:58
 msgid "Session location"
-msgstr ""
+msgstr "Session Location"
 
 #: ./genweb/organs/content/sessio.py:48
 msgid "Session number"
-msgstr ""
+msgstr "Session Number"
 
 #: ./genweb/organs/browser/views/acta_print.pt:94
 #: ./genweb/organs/content/acta.py:87
 #: ./genweb/organs/content/acta_templates/acta_view.pt:136
 msgid "Session order"
-msgstr ""
+msgstr "Agenda"
 
 #: ./genweb/organs/browser/views/acta_print.pt:59
 #: ./genweb/organs/content/organgovern_templates/organgovern_view.pt:130
 msgid "Session start"
-msgstr ""
+msgstr "Start time of the session"
 
 #: ./genweb/organs/content/acta.py:47
 #: ./genweb/organs/content/acta_templates/acta_view.pt:113
 #: ./genweb/organs/content/sessio.py:63
 msgid "Session start time"
-msgstr ""
+msgstr "Start time of the session"
 
 #: ./genweb/organs/content/organgovern_templates/organgovern_view.pt:116
 msgid "Sessions list"
-msgstr ""
+msgstr "List of sessions"
 
 #: ./genweb/organs/content/sessio.py:116
 msgid "Signatura"
-msgstr ""
+msgstr "Signature message"
 
 #: ./genweb/organs/content/organgovern.py:84
 #: ./genweb/organs/content/sessio.py:79
 msgid "Stakeholders mail address"
-msgstr ""
+msgstr "Addresses of the affected"
 
 #: ./genweb/organs/content/organgovern.py:85
 msgid "Stakeholders mail address help."
-msgstr ""
+msgstr "List of addresses of the people affected, thta want to be notified."
 
 #: ./genweb/organs/content/organgovern_templates/organgovern_view.pt:133
 #: ./genweb/organs/content/organsfolder_templates/organsfolder_view.pt:44
 msgid "State"
-msgstr ""
+msgstr "State"
 
 #: ./genweb/organs/content/sendMessage.py:36
 msgid "This content will be used as message content"
-msgstr ""
+msgstr "The following content will be attached to email."
 
 #: ./genweb/organs/content/organgovern_templates/organgovern_view.pt:68
 #: ./genweb/organs/content/organsfolder_templates/organsfolder_view.pt:35
 msgid "Title"
-msgstr ""
+msgstr "Title"
 
 #: ./genweb/organs/content/sessio.py:121
 #: ./genweb/organs/content/sessio_templates/sessio_view.pt:119
 msgid "Video link"
-msgstr ""
+msgstr "Link to the video session"
 
 #: ./genweb/organs/content/sessio.py:43
 msgid "Year"
-msgstr ""
+msgstr "Year Session"
 
 #: ./genweb/organs/content/sessio.py:80
 msgid "affected_mail_help"
-msgstr ""
+msgstr "List of addresses of the persons concerned, that will be notified notified on sessions modifications."
 
 #. Default: "There are currently no Organs in this folder."
 #: ./genweb/organs/content/organsfolder_templates/organsfolder_view.pt:83
 msgid "description_no_items_in_folder"
-msgstr ""
+msgstr "No Governing Body in this folder."
 
 #: ./genweb/organs/content/organgovern.py:125
 msgid "footerMail"
-msgstr ""
+msgstr "Footer of the message"
 
 #: ./genweb/organs/content/organgovern.py:126
 msgid "footerMail description"
-msgstr ""
+msgstr "Footer attached to the message, when Convoquing or Sending action."
 
 #: ./genweb/organs/content/organgovern.py:78
 #: ./genweb/organs/content/sessio.py:73
 msgid "mail address"
-msgstr ""
+msgstr "Notification Addresses"
 
 #: ./genweb/organs/content/sessio.py:74
 msgid "notification_mail_help"
-msgstr ""
+msgstr "Addresses where the messages related to the meeting will be arrive."
